design/TEST/TEST_SCC/0/scripts/RosettaDesign_ElectricFields_0.err
Lmod has detected the following error: These module(s) or extension(s) exist
but cannot be loaded as requested: "netcdf-c/4.9.2-cuda", "cuda",
"fftw/3.3.10-cuda-12.1.1", "openmpi/4.1.6-cuda-12.1.1"
   Try: "module spider netcdf-c/4.9.2-cuda cuda fftw/3.3.10-cuda-12.1.1
openmpi/4.1.6-cuda-12.1.1" to see how to load the module(s).



/scratch-scc/projects/scc_mmtm_bunzel/amber24/bin/teLeap: error while loading shared libraries: libnetcdf.so.19: cannot open shared object file: No such file or directory
mv: cannot stat 'leap.log': No such file or directory
Traceback (most recent call last):
  File "/mnt/vast-standard/home/hansadrian.bunzel01/u14852/AIzymes/design/TEST/TEST_SCC/../../../src/FieldTools.py", line 659, in <module>
    main()
  File "/mnt/vast-standard/home/hansadrian.bunzel01/u14852/AIzymes/design/TEST/TEST_SCC/../../../src/FieldTools.py", line 576, in main
    Trajectory, Charges, Names = fkt_Load_Trajectory(arg_nc,arg_param,arg_TIP4P)
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/mnt/vast-standard/home/hansadrian.bunzel01/u14852/AIzymes/design/TEST/TEST_SCC/../../../src/FieldTools.py", line 251, in fkt_Load_Trajectory
    parm = pmd.load_file(arg_parm)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/scratch-scc/projects/scc_mmtm_bunzel/amber24/lib/python3.12/site-packages/parmed/formats/registry.py", line 166, in load_file
    raise FileNotFoundError('%s does not exist' % filename)
FileNotFoundError: /mnt/vast-standard/home/hansadrian.bunzel01/u14852/AIzymes/design/TEST/TEST_SCC/0/ElectricFields/7vuu_RosettaDesign_0.parm7 does not exist
